tests/jsr335/Semantics/InterfaceMethods/InterfaceMethodBody/ShouldFail/syntax08/Test.java
public class Test {
	interface A {
		default void m() {
			return 4;
		}
	}
}